--- a/ClientApp/package.json
+++ b/ClientApp/package.json
@@ -2,9 +2,8 @@
   "name": "simple_crud",
   "version": "0.1.0",
   "private": true,
+  "engines": { "node": "10.14" },
   "dependencies": {
-    "node": "^12.16.0",
-    "npm":  "^6.13.0", 
     "@types/node": "^14.14.10",
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
