added db access

--- a/appsettings.json
+++ b/appsettings.json
@@ -1,11 +1,11 @@
 {
   "Logging": {
-      "LogLevel": {
+    "LogLevel": {
       "Default": "Information",
       "Microsoft": "Warning",
       "Microsoft.Hosting.Lifetime": "Information"
-      }
-    },
-"AllowedHosts": "*",
-"SQLCONNSTR_main": "test"
+    }
+  },
+  "AllowedHosts": "*",
+  "SQLCONNSTR_main": "local - connection string"
 }
