added units project in proper place 2

--- a/Tests/Tests.csproj
+++ b/Tests/Tests.csproj
@@ -13,7 +13,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\simple-crud\simple-crud.csproj" />
+    <ProjectReference Include="..\simple-crud.csproj" />
   </ItemGroup>
 
 </Project>
