logging and configuration

--- a/appsettings.json
+++ b/appsettings.json
@@ -7,5 +7,8 @@
     }
   },
   "AllowedHosts": "*",
-  "SQLCONNSTR_main": "local - connection string"
+  "ConnectionStrings": {
+    "main": "placeholder"
+  },
+  "ConsoleLoggingEnabled": "true"
 }
