--- a/appsettings.json
+++ b/appsettings.json
@@ -10,5 +10,6 @@
   "ConnectionStrings": {
     "main": "placeholder"
   },
-  "ConsoleLoggingEnabled": "true"
+  "ConsoleLoggingEnabled": "true",
+  "AzureLoggingEnabled": "true"
 }
