--- a/appsettings.json
+++ b/appsettings.json
@@ -8,7 +8,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "main": "placeholder"
+    "main": ""
   },
   "ConsoleLoggingEnabled": "true",
   "AzureLoggingEnabled": "true"
