--- a/Tests/Tests.csproj
+++ b/Tests/Tests.csproj
@@ -14,7 +14,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\simple-crud.csproj" />
+    <ProjectReference Include="..\simple-crud\simple-crud.csproj" />
   </ItemGroup>
 
 </Project>
