--- a/simple-crud/simple-crud.csproj
+++ b/simple-crud/simple-crud.csproj
@@ -19,21 +19,13 @@
 
   <ItemGroup>
     <!-- Don't publish the SPA source files, but do show them in the project files list -->
-    <Compile Remove="simple-crud.Data\**" />
-    <Compile Remove="Tests\**" />
     <Content Remove="$(SpaRoot)**" />
-    <Content Remove="simple-crud.Data\**" />
-    <Content Remove="Tests\**" />
-    <EmbeddedResource Remove="simple-crud.Data\**" />
-    <EmbeddedResource Remove="Tests\**" />
     <None Remove="$(SpaRoot)**" />
-    <None Remove="simple-crud.Data\**" />
-    <None Remove="Tests\**" />
     <None Include="$(SpaRoot)**" Exclude="$(SpaRoot)node_modules\**" />
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="simple-crud.Data\simple-crud.Data.csproj" />
+    <ProjectReference Include="..\simple-crud.Data\simple-crud.Data.csproj" />
   </ItemGroup>
 
   <Target Name="DebugEnsureNodeEnv" BeforeTargets="Build" Condition=" '$(Configuration)' == 'Debug' And !Exists('$(SpaRoot)node_modules') ">
