--- a/simple-crud/ClientApp/package.json
+++ b/simple-crud/ClientApp/package.json
@@ -7,6 +7,8 @@
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
     "@types/react-router": "^5.1.8",
+    "@types/react-router-dom": "^5.1.6",
+    "@types/reactstrap": "^8.7.2",
     "bootstrap": "^4.1.3",
     "jquery": "^3.4.1",
     "merge": "^1.2.1",
@@ -16,7 +18,7 @@
     "react-router-bootstrap": "^0.25.0",
     "react-router-dom": "^5.1.2",
     "react-scripts": "^3.4.1",
-    "reactstrap": "^8.4.1",
+    "reactstrap": "^8.7.1",
     "rimraf": "^2.6.2"
   },
   "devDependencies": {
